--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,42 @@
 #将静态内容部署到GitHub页面的简单工作流程
-名字: 将静态内容部署到页面
+name: Deploy static content to Pages
 
-在:
+on:
   #针对默认分支的推送运行
-推:
-分支: ["主要"]
+  push:
+    branches: ["main"]
 
   #允许您从“操作”选项卡手动运行此工作流
-工作流_调度:
+  workflow_dispatch:
 
 #设置GITHUB_TOKEN的权限以允许部署到GITHUB页面
-许可:
-内容: 阅读
-页: 写
-身份令牌: 写
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-#仅允许一个并发部署，跳过正在运行和最新排队运行之间排队的运行。
-#但是，不要取消正在进行的运行，因为我们希望这些生产部署能够完成。
-并发:
-组: "页数"
-正在取消: 错误的
+# 允许一次并发部署
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
-工作:
-  #单个部署作业，因为我们只是在部署
-部署:
-环境:
-名字: github-页面
-全球资源定位器(Uniform Resource Locator): ${{步骤.部署.输出.页面_url}}
-连续运行: Ubuntu-最新版
-步伐:
-      - 名字: 检验
-使用: 动作/签出@v4
-      - 名字: 设置页面
-使用: 操作/配置-页面@v5
-      - 名字: 上传工件
-        uses: actions/upload-pages-artifact@v3
+jobs:
+  # 单一部署作业，因为我们只是在部署
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v1
